# konnektoren-vc

./: Cargo.toml  Dockerfile  README.md  compose.yml  example.env
.github/workflows/: docker.yml
assets/: konnektoren_certificate.json  konnektoren_certificate_config.json  university_degree.json  university_degree_config.json
src/: certificate_data.rs  config.rs  lib.rs  main.rs  metrics.rs  server.rs  telemetry.rs
src/manager/: credential_issuer.rs  custom_credential_issuer.rs  mod.rs
src/middleware/: metrics.rs
src/routes/: assets.rs  example.rs  health.rs  mod.rs  openapi.rs  v1.rs  well_known.rs
src/services/: certificate_service.rs  mod.rs
src/storage/: memory_storage.rs  mod.rs
