[package]
name = "konnektoren-vc"
version = "0.1.0"
edition = "2021"

[features]
default = ["tracing", "metrics"]
tracing = ["opentelemetry", "tracing-opentelemetry", "opentelemetry-jaeger"]
metrics = [
    "opentelemetry/metrics",
    "opentelemetry_sdk/metrics",
    "opentelemetry-otlp/metrics",
    "opentelemetry-prometheus",
    "prometheus",
]

[dependencies]
axum = { version = "0.6", features = ["macros"] }
axum-auth = "0.4"
base64 = "0.22.1"
chrono = "0.4.38"
did-key = "*"
dotenv = "0.15.0"
futures = "0.3.30"
hyper = "1.4.1" # For generating QR codes
image = "0.24"
jsonwebtoken = "9.3.0"
konnektoren-core = { git = "https://github.com/konnektoren/konnektoren-rs.git", default-features = false }
log = "0.4.21"
num-bigint = "0.4.5"
oid4vc-core = { git = "https://github.com/impierce/openid4vc", branch = "feat/sd-jwt-vc" }
oid4vci = { git = "https://github.com/impierce/openid4vc", branch = "feat/sd-jwt-vc" }
oid4vc-manager = { git = "https://github.com/impierce/openid4vc", branch = "feat/sd-jwt-vc" }
pretty_env_logger = "0.5.0"
qrcodegen = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
urlencoding = "2.1.3"
url = "2.2"
subtle = "=2.5.0"
anyhow = "1.0.89"
reqwest = "0.12.7"
lazy_static = "1.5.0"
types-ob-v3 = { git = "https://github.com/impierce/digital-credential-data-models", branch = "dev" }
opentelemetry = { version = "0.20", features = [
    "rt-tokio",
    "trace",
], optional = true }
opentelemetry-jaeger = { version = "0.19", features = [
    "rt-tokio",
    "collector_client",
    "reqwest_collector_client",
], optional = true }
tracing-opentelemetry = { version = "0.21", optional = true }
opentelemetry_sdk = { version = "0.20", features = ["rt-tokio", "metrics"], optional = true }
opentelemetry-otlp = { version = "0.13", features = ["metrics"], optional = true }
opentelemetry-prometheus = { version = "0.13", optional = true }
prometheus = { version = "0.13", optional = true }
